fix: bottom-left, right overflow on selected day

--- a/frontend/calendar.css
+++ b/frontend/calendar.css
@@ -83,7 +83,9 @@
   width: 100%;
 
   margin: 0;
-  border-radius: 0 0 5% 5%;
+  /* border-radius: 0 0 5% 5%; */
+  border-radius: 0 0 15px 15px;
+  overflow: hidden;
 }
 
 .days div {
